# django

./: pyproject.toml
cars/: settings.py  urls.py
engineering/: admin.py  forms.py  models.py  urls.py  views.py
engineering/migrations/: 0001_initial.py
engineering/static/css/: bootstrap.css  style.css
engineering/static/js/: script.js
engineering/templates/: base.html
engineering/templates/account/: login.html
engineering/templates/include/: footer.html  header.html  pagination.html  sidebar.html
engineering/templates/movies/: actor.html  base.html  movie_detail.html  movie_list.html
engineering/templates/website/django_movie_template-master/: moviesingle.html
engineering/templatetags/: movie_tag.py
static/css/: bootstrap.css  style.css
